Copyright (C) 2009-2023 Intel Corporation

Version 2.4.5 - XX.XX.XXXX (IRQL fork)

* Expose RGBX as a VPP format on ILK
* Expose RGBA/BGRA as a VPP format on ILK

    Ironlake is affected by the same issue as Sandybridge with
    these formats, meaning that a workaround is needed for Chromium.

* Don't advertise VAProfileHEVCMain10 format support on HSW and IVB.

Version 2.4.4 - 06.Apr.2025 (IRQL fork)

* Add RPM packaging (Thanks @sergiorussia)
* Move ArchLinux packaging into main repository
* Minor code cleanup.
* Expose ARGB as a surface, attempt two.
* Update SECURITY.md
* Import an optimization from the iHD driver.
* Fix a potential deadlock problem in i965_put_surface_x11
* Import a workaround for low-resolution encoding on low-power Gen 8 and 9 hardware.
* Move some defines into va_backend_compat, also fixes potential errors when using an older libva.
* Fix non-RGB pixel format regressions introduced in 2.4.3

Version 2.4.3 - 12.Mar.2025 (IRQL fork)

* Fix Chromium VA-API decoding
* Expose ARGB support within surfaces and VPP
* Implement vaMapBuffer2
* Implement vaSyncBuffer
* Implement vaSyncSurface2
* Add back rate-control counter support, enable with environment variable `I965_RC_COUNTER=1`
* Silence some VA errors when a VAProfile is not found
* Fixed VP8 hybrid encoding handling, enable with environment variable `I965_VP8_ENCODE=1`
* Allow VA_SURFACE_ATTRIB_MEM_TYPE_DRM_PRIME_3 in i965_ExportSurfaceHandle
* Expose VAConfigAttribMaxPictureWidth
* Expose VAConfigAttribMaxPictureHeight
* Fix crashes for Wayland users when wl_drm is not available
* Fix JPEG decoding on IVB/HSW and BDW.
* Fix exporting tri-planar buffers with VA_EXPORT_SURFACE_SEPARATE_LAYERS

	====== 2.4.2 intentionally skipped ========

Version 2.4.1 - 01.Jun.2020
* Bump version to 2.4.1 for maintenance release
* Fix compiler errors with gcc 10
* Relax the compressed frames minimum size restriction for VP9 encoder

Version 2.4.0 - 06.Dec.2019
* Bump version to 2.4.0 for maintenance release