@@ -1,3 +1,29 @@
+if ENABLE_GEN10_SUPPORT
+    GEN10_SOURCES = \
+	    gen10_encoder_vp8.c \
+	    gen10_hcp_common.c \
+	    gen10_hevc_enc_kernels_binary.c \
+	    gen10_hevc_enc_common.c \
+	    gen10_hevc_encoder.c \
+	    gen10_huc_common.c \
+	    gen10_vdenc_common.c \
+	    gen10_vdenc_vp9.c \
+
+    GEN10_HEADERS = \
+	    gen10_hcp_common.h \
+	    gen10_hevc_enc_kernel.h \
+	    gen10_hevc_enc_kernels_binary.h \
+	    gen10_hevc_enc_common.h \
+	    gen10_hevc_encoder.h \
+	    gen10_hevc_enc_const_def.h \
+	    gen10_huc_common.h \
+	    gen10_vdenc_common.h \
+	    gen10_vdenc_vp9.h \
+else
+    GEN10_SOURCES=
+    GEN10_HEADERS=
+endif
+
 source_c = \
 	dso_utils.c \
 	gen6_mfc.c \
@@ -65,15 +91,7 @@ source_c = \
 	gen9_hevc_enc_kernels_binary.c \
 	gen9_hevc_encoder.c \
 	gen9_hevc_enc_utils.c \
-	gen10_encoder_vp8.c \
-	gen10_hcp_common.c \
-	gen10_hevc_enc_kernels_binary.c \
-	gen10_hevc_enc_common.c \
-	gen10_hevc_encoder.c \
-	gen10_huc_common.c \
-	gen10_vdenc_common.c \
-	gen10_vdenc_vp9.c \
-	$(NULL)
+	$(GEN10_SOURCES) $(NULL)
 
 source_h = \
 	dso_utils.h \
@@ -141,13 +159,4 @@ source_h = \
 	gen9_hevc_enc_kernels_binary.h \
 	gen9_hevc_enc_utils.h \
 	gen9_hevc_encoder.h \
-	gen10_hcp_common.h \
-	gen10_hevc_enc_kernel.h \
-	gen10_hevc_enc_kernels_binary.h \
-	gen10_hevc_enc_common.h \
-	gen10_hevc_encoder.h \
-	gen10_hevc_enc_const_def.h \
-	gen10_huc_common.h \
-	gen10_vdenc_common.h \
-	gen10_vdenc_vp9.h \
-	$(NULL)
+	$(GEN10_HEADERS) $(NULL)
